<?xml version="1.0"?>
<package>
  <name>testing</name>
  <version>0.0.1</version>
  <description>The testing package</description>

  <maintainer email="philipp.oettershagen@mavt.ethz.ch">Philipp Oettershagen</maintainer>
  <maintainer email="xiaoting@gmail.com">xiaoting</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cmake_modules</run_depend> 

  <export>
  </export>
</package>
